# S3Y-Android-App

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v31/: themes.xml
common/: build.gradle
common/src/main/cpp/: CMakeLists.txt  native-lib.cpp
common/src/main/res/drawable/: loading_icon.xml  loading_image_large.xml  loading_image_meduim.xml
core/: build.gradle
core/src/main/cpp/: native-lib.cpp
core/src/main/res/drawable/: loading_animated_icon.xml  loading_image_small.xml
core/src/main/res/values/: colors.xml  strings.xml
core/src/main/res/values-ar/: strings.xml
data/: build.gradle
domain/: build.gradle
gateways/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
presentation/: build.gradle
presentation/src/main/: AndroidManifest.xml
presentation/src/main/assets/: app_logo.json  logo_animation.json
presentation/src/main/res/anim/: nav_right.xml  slide_down.xml  slide_up.xml
presentation/src/main/res/drawable/: app_logo.xml  back_arrow.xml  button_save.xml  button_shape.xml  categories.xml  certificate.xml  complete_password.xml  completed.xml  experiences.xml  forgot_password.xml  ic_cancel.xml  ic_confirm_password.xml  ic_dropdown.xml  ic_edit.xml  ic_email.xml  ic_gallery.xml  ic_github.xml  ic_id.xml  ic_job.xml  ic_linkedin.xml  ic_lock.xml  ic_pdf.xml  ic_person.xml  ic_phone.xml  ic_spinner.xml  (+12 more)
services/: build.gradle
(+284 files in other folders)
